--- a/ea-test-front-end/src/Componets/Timer/Countdown/Countdown.module.css
+++ b/ea-test-front-end/src/Componets/Timer/Countdown/Countdown.module.css
@@ -27,6 +27,7 @@
     text-align: center;
     margin: 0;
     padding: 0;
+    font-weight: 600;
 }
 .countdown span {
     font-size: 36px;
@@ -37,6 +38,13 @@
     display: flex;
     align-items: flex-start;
     font-size: 36px;
+}
+
+.countdown .colon span {
+    line-height: 160%;
+    font-weight: 600;
+    position: relative;
+    top: -0.35em;
 }
 /**************tablet******************************/
 .countdown_m {
